# Cpp-Multithreaded-Asynchronous-Logging-System

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
examples/: example.cpp
include/: LogLevel.h  Logger.h
